# 1c_project_template

./: .1c-devbase.json.example  .gitignore  .mcp.json.example  INSTALL.md  README.md
.claude/rules/: build-before-tests.md  no-form-changes.md
.claude/skills/1c-batch/: SKILL.md
.claude/skills/1c-batch/scripts/: __init__.py  cli.py  config.py  pyproject.toml  runner.py
configs/: README.md  YAXUNITconfig.json.example  application-mcp.yml.example  application.yml.example
docs/user-guide/: README.md
logs/: README.md
specs/: README.md
src/cf/: README.md
src/cfe/: README.md
src/cfe/unit_tests/: ConfigDumpInfo.xml  Configuration.xml
src/cfe/unit_tests/CommonModules/: Тест_Пример.xml
src/cfe/unit_tests/CommonModules/Тест_Пример/Ext/: Module.bsl
src/cfe/unit_tests/Languages/: Русский.xml
src/cfe/unit_tests/Roles/: Расш1_ОсновнаяРоль.xml
src/epf/: README.md
src/erf/: README.md
tasks/: README.md
tmp/: README.md
